docs/v0.2.0a42/_sources/reference/_autosummary/hpcflow.sdk.core.errors.rst.txt
hpcflow.sdk.core.errors
=======================

.. automodule:: hpcflow.sdk.core.errors
   
   
   
   

   
   
   

   
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:
   
      DuplicateExecutableError
      EnvironmentSpecValidationError
      ExtraInputs
      FileSpecValidationError
      FromSpecMissingObjectError
      InputSourceValidationError
      InputValueDuplicateSequenceAddress
      InvalidIdentifier
      InvalidInputSourceTaskReference
      JobscriptSubmissionFailure
      LoopAlreadyExistsError
      MalformedParameterPathError
      MissingActionEnvironment
      MissingCompatibleActionEnvironment
      MissingInputs
      ParameterSpecValidationError
      SchedulerVersionsFailure
      SubmissionFailure
      TaskSchemaMissingParameterError
      TaskSchemaSpecValidationError
      TaskTemplateInvalidNesting
      TaskTemplateMultipleInputValues
      TaskTemplateMultipleSchemaObjectives
      TaskTemplateUnexpectedInput
      TaskTemplateUnexpectedSequenceInput
      ToJSONLikeChildReferenceError
      UnknownResourceSpecItemError
      UnrequiredInputSources
      UnsetParameterDataError
      UnsupportedShellError
      ValuesAlreadyPersistentError
      WorkflowBatchUpdateFailedError
      WorkflowLimitsError
      WorkflowNotFoundError
      WorkflowParameterMissingError
      WorkflowSpecValidationError
      WorkflowSubmissionFailure
   
   



